Fixed responsivness bugs: navbar changing height now + cards can shrink ( no more horizontal scrolling ) !

--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,6 @@ h1, h2, h3, h4, h5 {
 
 /* Nav Bar */
 .nav{
-    max-height: 25px;
-
     position: sticky;
     top: 0;
 
@@ -65,6 +63,7 @@ h1, h2, h3, h4, h5 {
     flex-flow: row wrap;
     gap: 2rem;
     justify-content: space-around;
+    align-items: center;
 }
 .nav-logo img {
     width: 30px;
@@ -204,7 +203,7 @@ h1, h2, h3, h4, h5 {
     border-width: 10px;
     border-color: var(--color-void);
 
-    flex-shrink: 0;
+    flex-shrink: 0.8;
     flex-grow: 1;
     flex-flow: row wrap;
     justify-content: center;
